# mkpms-patch

./: CMakeLists.txt  README.md
docs/: bochk-paic-lsposed-notes.md
java-hide-lsposed/: AndroidManifest.xml  build.sh
java-hide-lsposed/src/main/assets/: xposed_init
java-hide-lsposed/src/main/java/dev/p1cc/javahide/: JavaHideModule.java
java-hide-lsposed/src/main/res/values/: strings.xml
java-hide-lsposed/stubs/de/robv/android/xposed/: XC_MethodHook.java  XposedBridge.java
java-hide-lsposed/stubs/de/robv/android/xposed/callbacks/: XC_LoadPackage.java
kpms/anti-detect/: CMakeLists.txt  anti-detect.c  anti_detect_ctl.c  paic_stable_service.sh
kpms/hide-maps/: hidemaps.c
kpms/recompile/: CMakeLists.txt  README.md  recompile.c  recompile.kpm  recompile_prctl_smoke.c
kpms/wxshadow/: CHANGELOG.md  CMakeLists.txt  README.md  wxshadow.c  wxshadow_bp.c  wxshadow_client.c  wxshadow_handlers.c  wxshadow_internal.h  wxshadow_pgtable.c  wxshadow_scan.c
